--- a/school.ui
+++ b/school.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>ente.png</normaloff>ente.png</iconset>
+    <normaloff>assets/icon.png</normaloff>assets/icon.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tabWidget">
